[package]
name = "test_pipeline"
version = "0.1.0"
authors = ["nbari <nbari@tequila.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
lazy_static = "1.4"
