[package]
name = "test_pipeline"
version = "0.1.0"
authors = ["nbari <nbari@tequila.io>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
built = { version = "0.4", features = ["git2"] }
chrono = "0.4"
clap = "2.33"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
pretty_env_logger = "0.4.0"
log = "0.4"
env_logger = "0.7.1"

[build-dependencies]
built = "0.4"
